added overlay effects

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,38 +36,63 @@
             <h2>Portfolio</h2>
             
             <div class ="portfolioimage">
-            <img src="assets/images/hangman.jpg" alt ="Hangman">
+                <img src="assets/images/hangman.jpg" alt ="Hangman">
                 <p class = "imagetitle" id = "hangman">
                     Hangman
                 </p>
+                <div class ="overlay">
+                    <div class ="overlaytext">
+                    Click to View
+                </div>
+                </div>
             </div>
 
             <div class ="portfolioimage">
-            <img src="assets/images/rpg.jpg" alt ="RPG Game">
+                <img src="assets/images/rpg.jpg" alt ="RPG Game">
                 <p class ="imagetitle" id ="rpg">
                     RPG Game
                 </p>
-            </div>
-
-            <div class = "portfoliomage">
-            <img src="assets/images/trivia.jpg" alt ="Trivia Game">
-                <p class = "imagetitle" id = "trivia">
-                    Trivia Game
-                </p>
-            </div>
-
-            <div class = "portfolioimage"> 
-            <img src="assets/images/widget.jpg" alt ="Rutgers Info Widget">
-                <p class = "imagetitle" id="info">
-                    Rutgers Info Widget
-                </p>
+                <div class ="overlay">
+                    <div class ="overlaytext">
+                    Click to View
+                </div>
+                </div>
             </div>
 
             <div class = "portfolioimage">
-            <img src="assets/images/rock.jpg" alt="Rock Paper Scissors">
+                <img src="assets/images/trivia.jpg" alt ="Trivia Game">
+                <p class = "imagetitle" id = "trivia">
+                    Trivia Game
+                </p>
+                <div class ="overlay">
+                    <div class ="overlaytext">
+                    Click to View
+                </div>
+                </div>
+            </div>
+
+            <div class = "portfolioimage"> 
+                <img src="assets/images/widget.jpg" alt ="Rutgers Info Widget">
+                <p class = "imagetitle" id="info">
+                    Rutgers Info Widget
+                </p>
+                <div class ="overlay">
+                    <div class ="overlaytext">
+                    Click to View
+                </div>
+                </div>
+            </div>
+
+            <div class = "portfolioimage">
+                <img src="assets/images/rock.jpg" alt="Rock Paper Scissors">
                 <p class = "imagetitle" id ="rock">
                     Rock Paper Scissors
                 </p>
+                <div class ="overlay">
+                    <div class ="overlaytext">
+                    Click to View
+                </div>
+                </div>
             </div>
 
 
